--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
             <div class="progress">
               <span class="skill">PostgresSQL<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Serverless <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Laravel <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -253,37 +253,37 @@
               <h4>Bioingeniería</h4>
               <h5>2009 - 2018</h5>
               <p><em>Universidad de Mendoza, Mendoza, Argentina</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Carrera de grado. Excelente desempeño en materias matemáticas e informáticas. Promedio académico: 8.14/10</p>
             </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
+            
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Experiencia profesional</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Visual Medica</h4>
+              <h4>Jr Web developer</h4>
+              <h5>2021 - Presente</h5>
+              <p><em>Godoy Cruz, Mendoza, Argentina </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Web developer en empresa orientada a tecnología en imagen médica</li>
+                <li>Tareas de desarrollo y mantenimiento </li>
+                <li>Nuevos desarrollos, fix de bugs, permanente participación en nuevos desarrollos aportando ideas</li>
+                <li>Sistemas principales desarrollados en Codeigniter 3 y Jquery usando PostgreSQL</li>
+                <li>Actualización a Codeigniter 4 de algunos sistemas</li>
+                <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
+                <li>Comunicación entre los sistemas</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Medicor SA</h4>
+              <h4>Asistente técnico en servicios de Neurocirugía</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Ciudad, Mendoza, Argentina</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Realizado de aplicación tipo calendario para controlar cirugías de la empresa usando Php, Bootstrap, MySql</li>
+                <li>Prestación de servicios y materiales en neurocirugías</li>
+                <li>Planificación de neuronavegación, abordaje y utilización durante la cirugía</li>
+                <li>Asistencia a cirugía prestando aspirador ultrasónico, craneótomo y materiales de cierre</li>
               </ul>
             </div>
           </div>
