--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#cursos" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Cursos</span></a></li>
-        <li><a href="#idiomas" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Idiomas</span></a></li>
-        <li><a href="#habilidades" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Habilidades</span></a></li>
+        <li><a href="#idiomas" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Idiomas</span></a></li>
+        <li><a href="#habilidades" class="nav-link scrollto"><i class="bx bx-user-voice"></i> <span>Habilidades</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -372,7 +372,7 @@
         </div>
     </section><!-- End Services Section -->
 
-    <section id="idiomas" class="resume">
+    <section id="idiomas" class="services">
       <div class="section-title">
           <h2>Idiomas</h2>
           <p>Lenguajes hablados, no informáticos si no de los que se hablan</p>
@@ -380,26 +380,35 @@
         <div class="container" data-aos="fade-up">
   
           <div class="row">
-            <div class="col-lg-6">
-              <div class="resume-item pb-0">
-                <h4>Español</h4>
-                <p><em>Nativo </em></p>
+            <div class="row">
+
+              <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="icon-box iconbox-blue">
+                  <div class="icon">
+                    <img src="./assets/img/spain.png"/>
+                  </div>
+                  <h4><a href="">Español</a></h4>
+                  <p><em>Nativo</em></p>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="resume-item">
-                <h4>Inglés</h4>
+
+
+            <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-blue">
+                <div class="icon">
+                  <img src="./assets/img/united-kingdom.png"/>
+                </div>
+                <h4><a href="">Inglés</a></h4>
                 <p><em>Nivel B2</em></p>
                 <ul>
-                  <li>Curso Argentina Programa</li>
-                  <li>Curso English British Council</li>
-                  <li>Duolingo</li>
+                  <li>Curso</li>
+                  <li>Curso</li>
+                  <li>Curso</li>
                 </ul>
               </div>
-              </div>
-              
-            
+            </div>
           </div>
+
   
         </div>
     </section><!-- End Services Section -->
