pdf file language

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
     </section><!-- End Services Section -->
 
-    <section id="idiomas" class="services">
+    <section id="idiomas" class="services resume">
       <div class="section-title">
           <h2>Idiomas</h2>
           <p>Lenguajes hablados, no informáticos si no de los que se hablan</p>
@@ -400,11 +400,14 @@
                 </div>
                 <h4><a href="">Inglés</a></h4>
                 <p><em>Nivel B2</em></p>
-                <ul>
-                  <li>Curso</li>
-                  <li>Curso</li>
-                  <li>Curso</li>
-                </ul>
+                  <div class="resume-item">Argentina Programa <a href="./assets/pdf/certificado_argentina_programa_ingles.pdf"><i class="bi bi-file-pdf"></i></a>
+                    <li>Centro Universitario de Idiomas</li>
+                    <li>Nivel 8 B1.2</li>
+                    <li>Marzo 2023</li>
+                  </div>
+                  <div class="resume-item">Curso</div>
+                  <div class="resume-item">Curso</div>
+              
               </div>
             </div>
           </div>
