--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Fecha de nacimiento:</strong> <span>21 Mar 1991</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Mendoza, ARG</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nacionalidad:</strong> <span>Argentina, Italiana</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Nacionalidad:</strong> <span>Argentina <img src="./assets/img/argentina24.png" alt=""> , Italiana <img src="./assets/img/italy24.png" alt=""> </span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -400,14 +400,18 @@
                 </div>
                 <h4><a href="">Inglés</a></h4>
                 <p><em>Nivel B2</em></p>
-                  <div class="resume-item">Argentina Programa <a href="./assets/pdf/certificado_argentina_programa_ingles.pdf"><i class="bi bi-file-pdf"></i></a>
-                    <li>Centro Universitario de Idiomas</li>
-                    <li>Nivel 8 B1.2</li>
-                    <li>Marzo 2023</li>
+                <div>Cursos</div>
+                <div class="resume-item">Argentina Programa 4.0<a href="./assets/pdf/certificado_argentina_programa_ingles.pdf" target=”_blank”><i class="bi bi-file-pdf"></i></a>
+                    <li class="detail-il"><small>Centro Universitario de Idiomas</small></li>
+                    <li class="detail-il">Nivel 8 B1.2</li>
+                    <li class="detail-il">Enero - Marzo 2023</li>
                   </div>
-                  <div class="resume-item">Curso</div>
-                  <div class="resume-item">Curso</div>
-              
+                  <div class="resume-item">English for work <a href="https://credentials.englishonline.britishcouncil.org/profile/eu-fabiolucianosquizzato973691/wallet" target=”_blank”><i class="bi bi-person-lines-fill"></i></a>
+                    <li class="detail-il">British Council</li>
+                    <li class="detail-il">Level B2</li>
+                    <li class="detail-il">Mayo - Agosto 2023</li>
+                  </div>
+                  <div class="resume-item">Duolingo <a href="https://www.duolingo.com/profile/squizzato.fabio" target=”_blank”><i class="bi bi-person-lines-fill"></i></a></div>              
               </div>
             </div>
           </div>
@@ -512,89 +516,6 @@
           </section><!-- End Services Section -->
 
 
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Testimonials</h2>
-        </div>
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
@@ -622,7 +543,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Telegram:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p><a href="https://t.me/fabios21" target="_blank" rel="noopener noreferrer">@fabios21</a></p>
               </div>
 
             </div>
