--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </ul>
               </div>
             </div>
-              <p>Bioingeniero trabajando en el campo del desarrollo web, con un año y medio de experiencia. Interesado principalmente en backend, aunque en actualidad también trabaje con frontend. En empleo actual hago uso de codeigniter 3, Jquery, PostgreSQL y VueJS. Siempre apuntando a la formación continua, busco aprender nuevas tecnologías. Hoy en día estoy aprendiendo conceptos de microservicios, haciendo uso de Serverless con Vercel usando NextJS.</p>
+              <p>Bioingeniero trabajando en el campo del desarrollo web, con dos años de experiencia. Interesado principalmente en <em>backend</em>, aunque en actualidad también trabaje con <em>frontend</em>. En empleo actual hago uso de <em>codeigniter 3, Jquery, PostgreSQL y VueJS</em>. Siempre apuntando a la formación continua, busco aprender nuevas tecnologías. Hoy en día estoy aprendiendo conceptos de <em>microservicios</em>, haciendo uso de <em>Serverless con Vercel</em> usando <em>NextJS.</em></p>
         
           </div>
         </div>
@@ -199,7 +199,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">NodeJS <i class="val">70%</i></span>
+              <span class="skill">NodeJS<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -281,6 +281,7 @@
                 <li>Actualización a Codeigniter 4 de algunos sistemas</li>
                 <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
                 <li>Comunicación entre los sistemas</li>
+                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
               </ul>
             </div>
             <div class="resume-item">
