--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <h5>2019 - 2021</h5>
               <p><em>Medicor SA, Mendoza, Argentina</em></p>
               <ul>
-                <li>Realizado de aplicación tipo calendario para controlar cirugías de la empresa usando Php, Bootstrap, MySql</li>
+                <li>Realizado de aplicación tipo calendario para controlar cirugías de la empresa usando <em>Php, Bootstrap, MySql</em><img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-mysql-48.png" alt=""><img src="./assets/img/icons/icons8-bootstrap-48.png" alt=""></li>
                 <li>Prestación de servicios y materiales en neurocirugías</li>
                 <li>Planificación de neuronavegación, abordaje y utilización durante la cirugía</li>
                 <li>Asistencia a cirugía prestando aspirador ultrasónico, craneótomo y materiales de cierre</li>
@@ -371,6 +371,47 @@
           <h2>Cursos</h2>
           <p>Capacitaciones extras que han servido para la actualización continua</p>
         </div>
+
+               <div class="container" data-aos="fade-up">
+  
+          <div class="row">
+
+              <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="icon-box iconbox-blue">
+                  <div class="icon">
+                    <img src="./assets/img/icons/icons8-java-48.png"/>
+                  </div>
+                  <h4><a href="">Java Intermedio Oracle Sun</a></h4>
+                  <p><em>Academias UTN Mendoza</em></p>
+                </div>
+              </div>
+
+
+            <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-blue">
+                <div class="icon">
+                  <img src="./assets/img/united-kingdom.png"/>
+                </div>
+                <h4><a href="">Inglés</a></h4>
+                <p><em>Nivel B2</em></p>
+                <div>Cursos</div>
+                <div class="resume-item">Argentina Programa 4.0<a href="./assets/pdf/certificado_argentina_programa_ingles.pdf" target=”_blank”><i class="bi bi-file-pdf"></i></a>
+                    <li class="detail-il"><small>Centro Universitario de Idiomas</small></li>
+                    <li class="detail-il">Nivel 8 B1.2</li>
+                    <li class="detail-il">Enero - Marzo 2023</li>
+                  </div>
+                  <div class="resume-item">English for work <a href="https://credentials.englishonline.britishcouncil.org/profile/eu-fabiolucianosquizzato973691/wallet" target=”_blank”><i class="bi bi-person-lines-fill"></i></a>
+                    <li class="detail-il">British Council</li>
+                    <li class="detail-il">Level B2</li>
+                    <li class="detail-il">Mayo - Agosto 2023</li>
+                  </div>
+                  <div class="resume-item">Duolingo <a href="https://www.duolingo.com/profile/squizzato.fabio" target=”_blank”><i class="bi bi-person-lines-fill"></i></a></div>              
+              </div>
+            </div>
+          </div>
+
+  
+        </div>
     </section><!-- End Services Section -->
 
     <section id="idiomas" class="services resume">
@@ -381,7 +422,6 @@
         <div class="container" data-aos="fade-up">
   
           <div class="row">
-            <div class="row">
 
               <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box iconbox-blue">
