--- a/index.html
+++ b/index.html
@@ -390,22 +390,11 @@
             <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box iconbox-blue">
                 <div class="icon">
-                  <img src="./assets/img/united-kingdom.png"/>
+                  <img src="./assets/img/icons/icons8-nodejs.png"/>
                 </div>
-                <h4><a href="">Inglés</a></h4>
-                <p><em>Nivel B2</em></p>
-                <div>Cursos</div>
-                <div class="resume-item">Argentina Programa 4.0<a href="./assets/pdf/certificado_argentina_programa_ingles.pdf" target=”_blank”><i class="bi bi-file-pdf"></i></a>
-                    <li class="detail-il"><small>Centro Universitario de Idiomas</small></li>
-                    <li class="detail-il">Nivel 8 B1.2</li>
-                    <li class="detail-il">Enero - Marzo 2023</li>
-                  </div>
-                  <div class="resume-item">English for work <a href="https://credentials.englishonline.britishcouncil.org/profile/eu-fabiolucianosquizzato973691/wallet" target=”_blank”><i class="bi bi-person-lines-fill"></i></a>
-                    <li class="detail-il">British Council</li>
-                    <li class="detail-il">Level B2</li>
-                    <li class="detail-il">Mayo - Agosto 2023</li>
-                  </div>
-                  <div class="resume-item">Duolingo <a href="https://www.duolingo.com/profile/squizzato.fabio" target=”_blank”><i class="bi bi-person-lines-fill"></i></a></div>              
+                <h4><a href="">Node: De cero a experto (Edición 2021)</a></h4>
+                <p><em>Udemy</em></p>
+                <p>Fernando Herrera</p>
               </div>
             </div>
           </div>
