--- a/index.html
+++ b/index.html
@@ -376,18 +376,19 @@
   
           <div class="row">
 
-              <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box iconbox-blue">
                   <div class="icon">
                     <img src="./assets/img/icons/icons8-java-48.png"/>
                   </div>
                   <h4><a href="">Java Intermedio Oracle Sun</a></h4>
                   <p><em>Academias UTN Mendoza</em></p>
+                  <p><a href="http://academiasutnmza.com/java-intermedio/"><i class="bi bi-link"></i></a></p>
                 </div>
               </div>
 
 
-            <div class="col-lg-6 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box iconbox-blue">
                 <div class="icon">
                   <img src="./assets/img/icons/icons8-nodejs.png"/>
@@ -395,9 +396,57 @@
                 <h4><a href="">Node: De cero a experto (Edición 2021)</a></h4>
                 <p><em>Udemy</em></p>
                 <p>Fernando Herrera</p>
+                <p><a href="https://www.udemy.com/course/node-de-cero-a-experto/"><i class="bi bi-link"></i></a></p>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-blue">
+                <div class="icon">
+                  <img src="./assets/img/icons/icons8-nodejs.png"/>
+                </div>
+                <h4><a href="">Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</a></h4>
+                <p><em>Udemy</em></p>
+                <p>Nicolás Schurmann</p>
+                <p><a href="https://www.udemy.com/course/aprende-javascript-es9-html-css3-y-nodejs-desde-cero/"><i class="bi bi-link"></i></a></p>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-blue">
+              <div class="icon">
+                <img src="./assets/img/icons/icons8-javascript-48.png"/>
+              </div>
+              <h4><a href="">Javascript: de cero hasta los detalles (ES5)</a></h4>
+              <p><em>Udemy</em></p>
+              <p>Fernando Herrera</p>
+              <p><a href="https://www.udemy.com/course/javascript-de-cero-hasta-los-detalles/"><i class="bi bi-link"></i></a></p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-blue">
+              <div class="icon">
+                <img src="./assets/img/icons/icons8-php-40.png"/>
+              </div>
+              <h4><a href="">Curso Php/MySql</a></h4>
+              <p><em>Píldoras informáticas</em></p>
+              <p><a href="https://www.youtube.com/watch?v=I75CUdSJifw&list=PLU8oAlHdN5BkinrODGXToK9oPAlnJxmW_"><i class="bi bi-link"></i></a></p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-blue">
+              <div class="icon">
+                <img src="./assets/img/icons/icons8-python-48.png"/>
+              </div>
+              <h4><a href="">Curso Python desde 0.</a></h4>
+              <p><em>Píldoras informáticas</em></p>
+              <p><a href="https://www.youtube.com/watch?v=G2FCfQj-9ig&list=PLU8oAlHdN5BlvPxziopYZRd55pdqFwkeS"><i class="bi bi-link"></i></a></p>
+            </div>
+          </div>
+        </div>
 
   
         </div>
@@ -534,8 +583,8 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Estimaciones temporales</a></h4>
+              <p>Buena habilidad para calcular de manera apropiada los tiempos de tareas</p>
             </div>
           </div>
 
