--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <h4>Simulador Cajero automático</h4>
                 <p><img src="./assets/img/icons/icons8-java-48.png"/>Java</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -333,7 +333,7 @@
                 <h4>WebApp tipo calendario para llevar cirugías</h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -347,7 +347,7 @@
                 <h4>App para conocer el clima</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -360,7 +360,7 @@
                 <h4>Modelo REST server</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -373,7 +373,7 @@
                 <h4>Pequeña PWA</h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -386,7 +386,7 @@
                 <h4>Posteo de comentarios</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -399,7 +399,7 @@
                 <h4>Simulación Boleta Única Mendoza</h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -412,7 +412,7 @@
                 <h4>Simulador Torneo de fútbol</h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -425,9 +425,7 @@
                 <h4>Computer Aided Diagnoses for mammographies</h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Cardss 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                  <a href="portfolio-details2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -439,7 +437,7 @@
                 <h4>App que permite calcular la Transformada de Fourier</h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
