--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <img src="assets/img/portfolio/java.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Simulador Cajero automático</h4>
-                <p><img src="./assets/img/icons/icons8-java-48.png"/>Java</p>
+                <p><img src="./assets/img/icons/icons8-java-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
@@ -333,7 +333,7 @@
                 <h4>WebApp tipo calendario para llevar cirugías</h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="web-app-calendario.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -347,7 +347,7 @@
                 <h4>App para conocer el clima</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="app-weather.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -360,7 +360,7 @@
                 <h4>Modelo REST server</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="rest-server-model.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -373,7 +373,7 @@
                 <h4>Pequeña PWA</h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="iss-pwa.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -386,7 +386,7 @@
                 <h4>Posteo de comentarios</h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="posteo-comentarios.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -399,7 +399,7 @@
                 <h4>Simulación Boleta Única Mendoza</h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="boleta-unica.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -412,7 +412,7 @@
                 <h4>Simulador Torneo de fútbol</h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="torneo-futbol.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -425,7 +425,7 @@
                 <h4>Computer Aided Diagnoses for mammographies</h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="computer-aided-diagnoses.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -437,7 +437,7 @@
                 <h4>App que permite calcular la Transformada de Fourier</h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="fourier-transform.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
