--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <h4>Simulador Cajero automático</h4>
                 <p><img src="./assets/img/icons/icons8-java-48.png"/></p>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="simulador-cajero.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
