--- a/simulador-cajero.html
+++ b/simulador-cajero.html
@@ -45,19 +45,16 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Simulador de cajero automático</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías utilizadas</strong><img src="./assets/img/icons/icons8-java-48.png"/> JFrame <img src="./assets/img/icons/icons8-mysql-48.png"/></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/cajeroAutomatico">https://github.com/fabio2100/cajeroAutomatico</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                App desarrollada para finalización de curso Java Oracle Intermedio. Consistía en todo un desarrollo en <em>Java</em> usando <em>JFrame</em> para las ventanas y <em>MySql</em> como base de datos con conectores <em>JDBC</em>. El desarrollo consistía en múltiples <em>ABM</em> para simular el funcionamiento de un Home Banking de un banco determinado. Los <em>ABM</em> desarrollados tenían que ver con transferencias, usuarios, contactos, saldos.
               </p>
             </div>
          
