--- a/web-app-calendario.html
+++ b/web-app-calendario.html
@@ -45,19 +45,18 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>WebApp tipo calendario</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-bootstrap-48.png"/></li>
+                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/></li>
+                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://canisminor.000webhostapp.com/cirugias/">https://canisminor.000webhostapp.com/cirugias/</a></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/gestionDeCirugias">https://github.com/fabio2100/gestionDeCirugias</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                App que permite <em>ABM</em> de cirugías para una empresa que presta servicios a las mismas. Permite el ingreso de todos los detalles de la cirugía, como fecha y hora, médicos, pacientes, servicios prestados, facturación. Realizado con <em>Php</em> usando una base de datos <em>MySql</em> y siguiendo una programación lineal, renderizando todo desde el servidor. Este fue uno de mis primeros proyectos, que me permitió conocer en detalle el funcionamiento de <em>Php</em>. Para probar el sistema, ingresar con usuario <em>admin</em>, clave <em>1234</em>
               </p>
             </div>
          
