--- a/rest-server-model.html
+++ b/rest-server-model.html
@@ -47,17 +47,14 @@
             <div class="portfolio-info">
               <h3>App para conocer el clima</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/> <img src="./assets/img/icons/icons8-mongodb.png"/> Express </li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/curso-node-restserver/">https://github.com/fabio2100/curso-node-restserver/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                <em>Backend</em> completo de un sistema con CRUD para usuarios, productos y categorías. Se crearon todos los <em>endpoints</em> para lo mencionado anteriormente. Además valida usuarios con <em>JWT</em> y contiene buscadores para productos y categorías 
               </p>
             </div>
          
