Continuación con portfolio

--- a/boleta-unica.html
+++ b/boleta-unica.html
@@ -45,19 +45,18 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Simulación Boleta Única Mendoza</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/></li>
+                <li><strong>Tecnologías <em>producción</em></strong><img src="./assets/img/icons/vercel.svg"/></li>
+                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://boleta-unica-mendoza.vercel.app/">https://boleta-unica-mendoza.vercel.app/</a></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/boleta-unica-mendoza">https://github.com/fabio2100/boleta-unica-mendoza</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                App que simula una boleta única usada en las elecciones provinciales de Mendoza, Argentina. Permite simular el voto de acuerdo a lo que elija el usuario usando partidos genéricos. Coloca fechas de elecciones, tipo de boleta y categorías según filtrado de tipo de elección, departamento y categoría. Realizado completamente con <em>Vue</em> y <em>CSS</em> puro
               </p>
             </div>
          
