--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               <img src="assets/img/portfolio/vuejs.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Simulación Boleta Única Mendoza</h4>
-                <p><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
+                <p><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="boleta-unica.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
