--- a/iss-pwa.html
+++ b/iss-pwa.html
@@ -45,19 +45,17 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Simple PWA</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/></li>
+                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://fabio2100.github.io/issPWA/">https://fabio2100.github.io/issPWA/</a></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/issPWA">https://github.com/fabio2100/issPWA</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                Simple <em>PWA</em> (Progressive Web App) que <em>traquea</em> la posición de la estación espacial y muestra en mapa su ubicación. Permite la instalación en el dispositivo que se está usando simulando una app nativa. Usando <em>Vue</em> se consulta períodicamente a una <em>Api</em> que devuelve la posición en coordenadas de longitud y latitud. Luego, dicha posición es mostrada en un mapa de <em>Bing</em>
               </p>
             </div>
          
