--- a/posteo-comentarios.html
+++ b/posteo-comentarios.html
@@ -45,19 +45,17 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Posteo de comentarios</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></li>
+                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/blogPequenio">https://github.com/fabio2100/blogPequenio</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                App que permite registrar un usuario y realizar un CRUD de comentarios, los cuales son mostrados temporalmente. Se usa como base de datos <em>Mongo</em>, realizado en <em>Node con Express</em>. Los usuarios se validan usando <em>JWT</em>. En el <em>frontend</em> se usa una tabla formateada con <em>Bootstrap</em> y los comentarios y el inicio de sesión se manipula con <em>Vue</em>
               </p>
             </div>
          
