--- a/torneo-futbol.html
+++ b/torneo-futbol.html
@@ -45,19 +45,19 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Simulador torneo fútbol</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-bootstrap-48.png"/></li>
+                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-php-40.png"/></li>
+                <li><strong><em>Base de datos</em></strong><img src="./assets/img/icons/icons8-mysql-48.png"/></li>
+                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://canisminor.000webhostapp.com/torneo">https://canisminor.000webhostapp.com/torneo</a></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/torneoMVC">https://github.com/fabio2100/torneoMVC</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                Pequeña aplicación que permite llevar adelante partidos y resultados en un torneo de fútbol. Se pueden ingresar equipos y luego generar resultados entre ellos, donde la tabla de posiciones se actualiza automáticamente. Posee alertas de equipos repetidos y permite ingresar partidos sin resultados para asignarlos después. La tabla de posiciones se muestra según los puntos, pero se puede reordenar según alguna columna ingresada por el usuario. Desarrollado con <em>Php</em> y <em>Bootstrap</em>. La base de datos es <em>MySql</em> y posee las relaciones para funcionar de manera automática.
               </p>
             </div>
          
