--- a/computer-aided-diagnoses.html
+++ b/computer-aided-diagnoses.html
@@ -45,19 +45,17 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Computer Aided Diagnoses</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>Tecnología</strong><img src="./assets/img/icons/icons8-matlab-48.png"/></li>
+                <li><strong>Url de un video del software en funcionamiento</strong>: <a target="_blank" href="https://www.youtube.com/watch?v=Z_wVsGEElHc">https://www.youtube.com/watch?v=Z_wVsGEElHc</li></a>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/Computer-Aided-Diagnoses-for-mammographies">https://github.com/fabio2100/Computer-Aided-Diagnoses-for-mammographies</li></a>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                Software realizado en <em>Matlab</em> como motivo de trabajo de grado de carrera de Bioingeniería. Se busca que sea operado por una persona con conocimientos básicos de informática. Una imagen mamográfica en formato imagen (.jpg,.png) es cargada y tiene como finalidad generar otra imagen con las posibles lesiones encontradas, ya sea nódulos y/o calcificaciones. Además permite también otras herramientas como la recuperación del contorno de la mama debido a la degradación de la imagen al usar otras herramientas, la extracción del músculo pectoral por cinco métodos distintos. El software presenta ventanas para la fácil operación del usuario, haciendo uso de la librería <em>Graphic User Interface</em> de <em>Matlab</em>
               </p>
             </div>
          
