--- a/fourier-transform.html
+++ b/fourier-transform.html
@@ -45,19 +45,16 @@
       <div class="container">
 
             <div class="portfolio-info">
-              <h3>App para conocer el clima</h3>
+              <h3>Calculadora de Transformada de Fourier</h3>
               <ul>
-                <li><strong>Lenguajes de <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong>Lenguajes de <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/></li>
-                <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
-                <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
-                <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
+                <li><strong>tecnología</strong><img src="./assets/img/icons/icons8-matlab-48.png"/></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/FourierTransform">https://github.com/fabio2100/FourierTransform</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Descripción</h2>
               <p>
-                App que permite ingresar una ciudad en un <em>input</em>, la cual busca en una <em>api</em> y devuelve las 8 coincidencias de ciudades similares, y luego pulsando en el ícono del clima se apunta a otra <em>api</em> la cual devuelve información sobre el estado del tiempo en esa ciudad. Este proyecto fue realizado con <em>Express</em> y luego reconvertido con <em>NextJS</em>
+                App realizada con <em>Matlab</em> usando <em>Graphic User Interface</em> para crear las ventanas que permite calcular la Transformada de Fourier de una señal y mostrar el resultado en otro gráfico. También se adjuntan señales correspondientes a números usando marcación por tonos para probar el software.  
               </p>
             </div>
          
